apps/hcm/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hcm-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hcm-backend
  template:
    metadata:
      labels:
        app: hcm-backend
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
      - name: backend
        image: ghcr.io/panikaa/hcm-backend:cf5e4697d154e670fe7a4b1f6f3d7c50ca673aba
        command: ["sh", "-c", "npx prisma migrate deploy && npm start"]
        ports:
          - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
