apps/hcm/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcm-backend
  labels:
    app: hcm-backend
spec:
  type: ClusterIP
  selector:
    app: hcm-backend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
